--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,9 @@
-torch
-torchvision
-clearml
-gradio
-matplotlib
-numpy
+torch>=2.2
+torchvision>=0.17
+datasets>=2.19
+clearml>=1.16
+numpy>=1.26
+scikit-learn>=1.4
+pyyaml>=6.0
+matplotlib>=3.8
+tqdm>=4.66
