Add initial UI screen including image upload.

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -13,7 +13,7 @@ jobs:
 
   checks:
 
-    runs-on: self-hosted
+    runs-on: self-hosted # removed ubuntu-latest to run checks on local device.
 
     steps:
       - name: Checkout repository
