--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -17,11 +17,27 @@ data:
   augment: false
   
   # Class imbalance handling
-  balance_strategy: null  # Options: null, "uniform", "weighted_sampler", "weighted_loss"
+  balance_strategy: null  # Options: null, "uniform", "weighted_sampler", "weighted_loss", "hybrid"
   # - null: no balancing
   # - "uniform": downsample all classes to smallest class size
   # - "weighted_sampler": use WeightedRandomSampler during training
   # - "weighted_loss": use class weights in loss function
+  # - "hybrid": combine sampling and loss weighting
+  
+  # Strategy-specific configuration
+  balance_config:
+    # For uniform sampling
+    seed: 42
+    
+    # For weighted sampler
+    replacement: true
+    
+    # For weighted loss
+    weight_power: 1.0  # Power to apply to weights (1.0 = no change, <1.0 = softer, >1.0 = stronger)
+    
+    # For hybrid strategy
+    sampling_strategy: "none"  # "none", "uniform", or "weighted"
+    use_weighted_loss: true
 
 
 model:
