--- a/configs/train_intermediate_baseline.yaml
+++ b/configs/train_intermediate_baseline.yaml
@@ -39,3 +39,10 @@ clearml:
   project: "KCL-PlantVillage"
   task_name: "convnet_baseline_intermediate"
   output_uri: null
+  clearml:
+  enabled: true
+  project: "KCL-PlantVillage"
+  task_name: "convnet_baseline_intermediate"
+  output_uri: null
+  queue: "default"
+
