--- a/requirements.txt
+++ b/requirements.txt
@@ -2,7 +2,7 @@ torch>=2.2
 torchvision>=0.17
 datasets>=2.19
 clearml>=1.16
-numpy>=1.26
+numpy==2.2.6
 scikit-learn>=1.4
 pyyaml>=6.0
 matplotlib>=3.8
