--- a/configs/train.yaml
+++ b/configs/train.yaml
@@ -16,7 +16,7 @@ data:
   test_size: 0.15
   num_workers: 4
   normalize: true
-  augment: true  
+  augment: true
   # Class imbalance handling
   balance_strategy: null  # Options: null, "uniform", "weighted_sampler", "weighted_loss", "hybrid"
   # - null: no balancing
@@ -24,23 +24,24 @@ data:
   # - "weighted_sampler": use WeightedRandomSampler during training
   # - "weighted_loss": use class weights in loss function
   # - "hybrid": combine sampling and loss weighting
-  
+
   # Strategy-specific configuration
   balance_config:
     # For uniform sampling
     seed: 42
-    
+
     # For weighted sampler
     replacement: true
-    
+
     # For weighted loss
     weight_power: 1.0  # Power to apply to weights (1.0 = no change, <1.0 = softer, >1.0 = stronger)
-    
+
     # For hybrid strategy
     sampling_strategy: "none"  # "none", "uniform", or "weighted"
     use_weighted_loss: true
 
 model:
+  arch: "scratch"
   num_classes: 39
   channels: [32, 64, 128]    # conv blocks widths
   regularisation: "none"      # "none" | "dropout" | "batchnorm"
