--- a/configs/train_tiny_batchnorm.yaml
+++ b/configs/train_tiny_batchnorm.yaml
@@ -1,42 +1,51 @@
+# --- general ---
 seed: 42
 project_name: "PlantVillage-Baseline"
-task_name: "convnet_bn_tiny"
-tags: ["tiny", "batchnorm", "scratch"]
-device: "cuda"   # or "cpu" if you stay on CPU
+task_name: "scratch-cnn-tiny-dropout"
+tags: ["baseline", "scratch", "tiny", "dropout"]
+device: "cuda"
 
 data:
+  source: "clearml"
+  clearml_subset: "tiny"
   dataset_name: "DScomp380/plant_village"
-  image_size: 256          # or 128 if you want faster
-  subset_fraction: 0.05    # tiny dataset (5%)
+  data_dir: "/kaggle/input/plantvillage-dataset"
+  modalities: ["color", "grayscale", "segmented"]
+  image_size: 256
+  subset_fraction: 0.25
   val_size: 0.15
   test_size: 0.15
   num_workers: 4
   normalize: true
-  augment: false
+  augment: true  
+  balance_strategy: null
+  balance_config:
+    seed: 42
+    replacement: true
+    weight_power: 1.0
+    sampling_strategy: "none"
+    use_weighted_loss: true
 
 model:
   num_classes: 39
   channels: [32, 64, 128]
   regularisation: "batchnorm"
-  dropout: 0.0
-
+  dropout: 0.0                  
 train:
-  epochs: 10               # you can reduce to 10
+  epochs: 30
   batch_size: 64
   optimizer: "adamw"
   lr: 0.001
   weight_decay: 0.0001
-
   patience: 3
   min_delta: 0.0
-
   scheduler:
     type: "cosine"
-    T_max: 10
+    T_max: 30
 
 clearml:
   enabled: true
   project: "KCL-PlantVillage"
-  task_name: "convnet_bn_tiny"
+  task_name: "scratch-tiny-batchnorm"
   output_uri: null
   queue: "default"
