changing the configs

--- a/configs/train_tiny.yaml
+++ b/configs/train_tiny.yaml
@@ -15,7 +15,7 @@ data:
   source: "clearml"
   clearml_subset: "tiny"
   dataset_name: "DScomp380/plant_village"
-  data_dir: "/kaggle/input/plantvillage-dataset"  # Change to your path
+  data_dir: "/kaggle/input/plantvillage-dataset" 
   modalities: ["color", "grayscale", "segmented"]
   image_size: 256
   subset_fraction: 0.25
@@ -30,27 +30,20 @@ data:
   # - "uniform": downsample all classes to smallest class size
   # - "weighted_sampler": use WeightedRandomSampler during training
   # - "weighted_loss": use class weights in loss function
-  # - "hybrid": combine sampling and loss weighting
-  # NOT IMPLEMENTED YET
-  
+  # - "hybrid": combine sampling and loss weighting  
   # Strategy-specific configuration
   balance_config:
-    # For uniform sampling
     seed: 42
     
-    # For weighted sampler
     replacement: true
     
-    # For weighted loss
-    weight_power: 1.0  # Power to apply to weights (1.0 = no change, <1.0 = softer, >1.0 = stronger)
-    
-    # For hybrid strategy
+    weight_power: 1.0
     sampling_strategy: "none"  # "none", "uniform", or "weighted"
     use_weighted_loss: true
 
 model:
   num_classes: 39
-  channels: [32, 64, 128]    # conv blocks widths
+  channels: [32, 64, 128]    
   regularisation: "none"      # "none" | "dropout" | "batchnorm"
   dropout: 0.2                # used when regularisation == "dropout"
 
@@ -61,12 +54,12 @@ train:
   lr: 0.001
   weight_decay: 0.0001
 
-  patience: 3                 # early stopping patience
-  min_delta: 0.0              # minimum improvement in val metric to reset patience
+  patience: 3                 
+  min_delta: 0.0              
 
   scheduler:
-    type: "cosine"            # cosine annealing LR schedule
-    T_max: 30                 # usually = epochs
+    type: "cosine"            
+    T_max: 30                 
 
 clearml:
   enabled: true
