--- a/configs/train_large.yaml
+++ b/configs/train_large.yaml
@@ -15,37 +15,31 @@ data:
   source: "clearml"
   clearml_subset: "large"
   dataset_name: "DScomp380/plant_village"
-  data_dir: "/kaggle/input/plantvillage-dataset" 
+  data_dir: "/kaggle/input/plantvillage-dataset"
   modalities: ["color", "grayscale", "segmented"]
   image_size: 256
-  subset_fraction: 0.25
+  # subset_fraction: 0.25
   val_size: 0.15
   test_size: 0.15
   num_workers: 4
   normalize: true
-  augment: true  
-  # Class imbalance handling
-  balance_strategy: null  # Options: null, "uniform", "weighted_sampler", "weighted_loss", "hybrid"
-  # - null: no balancing
-  # - "uniform": downsample all classes to smallest class size
-  # - "weighted_sampler": use WeightedRandomSampler during training
-  # - "weighted_loss": use class weights in loss function
-  # - "hybrid": combine sampling and loss weighting  
-  # Strategy-specific configuration
+  augment: true
+  balance_strategy: null
+
   balance_config:
     seed: 42
-    
+
     replacement: true
-    
+
     weight_power: 1.0
-    sampling_strategy: "none"  # "none", "uniform", or "weighted"
+    sampling_strategy: "none"
     use_weighted_loss: true
 
 model:
   num_classes: 39
-  channels: [32, 64, 128]    
-  regularisation: "none"      # "none" | "dropout" | "batchnorm"
-  dropout: 0.2                # used when regularisation == "dropout"
+  channels: [32, 64, 128]
+  regularisation: "none"
+  dropout: 0.2
 
 train:
   epochs: 30
@@ -54,12 +48,12 @@ train:
   lr: 0.001
   weight_decay: 0.0001
 
-  patience: 3                 
-  min_delta: 0.0              
+  patience: 3
+  min_delta: 0.0
 
   scheduler:
-    type: "cosine"            
-    T_max: 30                 
+    type: "cosine"
+    T_max: 30
 
 clearml:
   enabled: true
