--- a/configs/train_medium.yaml
+++ b/configs/train_medium.yaml
@@ -18,34 +18,28 @@ data:
   data_dir: "/kaggle/input/plantvillage-dataset"
   modalities: ["color", "grayscale", "segmented"]
   image_size: 256
-  subset_fraction: 0.25
+  # subset_fraction: 0.25
   val_size: 0.15
   test_size: 0.15
   num_workers: 4
   normalize: true
   augment: true
-  # Class imbalance handling
-  balance_strategy: null  # Options: null, "uniform", "weighted_sampler", "weighted_loss", "hybrid"
-  # - null: no balancing
-  # - "uniform": downsample all classes to smallest class size
-  # - "weighted_sampler": use WeightedRandomSampler during training
-  # - "weighted_loss": use class weights in loss function
-  # - "hybrid": combine sampling and loss weighting
-  # Strategy-specific configuration
+  balance_strategy: null
+
   balance_config:
     seed: 42
 
     replacement: true
 
     weight_power: 1.0
-    sampling_strategy: "none"  # "none", "uniform", or "weighted"
+    sampling_strategy: "none"
     use_weighted_loss: true
 
 model:
   arch: "scratch"
   num_classes: 39
   channels: [32, 64, 128]
-  regularisation: "dropout"      # "none" | "dropout" | "batchnorm"
+  regularisation: "dropout"
   dropout: 0.5
 
 train:
